--- a/style.css
+++ b/style.css
@@ -4,3 +4,10 @@
     font-weight: 700;
     font-style: normal;
 }
+.roboto {
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:"wdth" 100;
+}
